--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "mocha": "^8.1.2"
+  },
+  "dependencies": {
+    "fs": "0.0.1-security",
+    "nodemon": "^2.0.4"
   }
 }
